* Added previews (light - dark)
* Re-arranged OnBoarding again to have stateless versions (just UsernameAgeRoot...for now...)

* Added OnBoardingLinearProgressIndicator

* Replaced asPaddingValues with safeDrawing. It's more preferable to use insets directly instead of asPaddingValues. The latter solves the problem that navigation insets are re-applied along with ime.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Flora1</string>
+    <string name="max_username_chars">Cannot have more than %d characters.</string>
 </resources>
