--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="born_screen_title">When were you born?</string>
     <string name="born_screen_description">Since cycles can change over time, this helps us customize the app for you.</string>
     <string name="username_screen_title">What is your username?</string>
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="yesterday">Yesterday</string>
 </resources>
