* Added complete instrumented test for OnBoarding flow
* Added plenty of Hilt Testing Module logic

* Added `surface` color to some composables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,19 @@
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
     <string name="yesterday">Yesterday</string>
+    <string name="primary_button_test_tag">primary_button_test_tag</string>
+    <string name="dropdown_with_border_test_tag">dropdown_with_border_test_tag</string>
+    <string name="dropdown_pregnancy_test_tag">dropdown_pregnancy_test_tag</string>
+    <string name="dropdown_miscarriages_test_tag">dropdown_miscarriages_test_tag</string>
+    <string name="dropdown_abortions_test_tag">dropdown_abortions_test_tag</string>
+    <string name="dropdown_race_test_tag">dropdown_race_test_tag</string>
+    <string name="icon_back_test_tag">icon_back_test_tag</string>
+    <string name="icon_next_test_tag">icon_next_test_tag</string>
+    <string name="bottom_sheet_test_tag">bottom_sheet_test_tag</string>
+    <string name="bottom_sheet_contraceptives_test_tag">bottom_sheet_contraceptives_test_tag</string>
+    <string name="clickable_text_field_test_tag">clickable_text_field_test_tag</string>
+    <string name="close_icon_test_tag">close_icon_test_tag</string>
+    <string name="lottie_elegant_woman_test_tag">lottie_elegant_woman_test_tag</string>
+    <string name="flora_dialog_test_tag">flora_dialog_test_tag</string>
+    <string name="prediction_dialog_test_tag">flora_dialog_test_tag</string>
 </resources>
