--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="must_be_less_than_eligible_age_description">You must be at least %d years old to use Flora as per European instructions. Sorry for any inconvenience but everyone should abide by the law for a happy life :)</string>
     <string name="born_screen_title">When were you born?</string>
     <string name="born_screen_description">Since cycles can change over time, this helps us customize the app for you.</string>
-    <string name="username_screen_title">What is your username?</string>
+    <string name="welcome_and_login_or_register_screen_title">Hello! You may optionally register or login with your account</string>
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
     <string name="yesterday">Yesterday</string>
