--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Flora1</string>
+    <string name="app_name">Flora</string>
     <string name="max_username_chars">Cannot have more than %d characters.</string>
     <string name="uh_oh">Uh oh!</string>
     <string name="must_be_less_than_eligible_age_description">You must be at least %d years old to use Flora as per European instructions. Sorry for any inconvenience but everyone should abide by the law for a happy life :)</string>
