* Created MyDoctors screen with mock data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="profile">Profile</string>
     <string name="welcome_christos">Welcome %s</string>
     <string name="language">Language</string>
+
+    <plurals name="my_doctors_description">
+        <item quantity="one">"%d doctor requested to help you. You may accept, revoke or decline each doctor\'s status at any point."</item>
+        <item quantity="other">%d doctors requested to help you. You may accept, revoke or decline each doctor\'s status at any point.</item>
+    </plurals>
 </resources>
