* Added Bottom Sheets with Units (Weight, Height).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="contraceptives">Contraceptives</string>
     <string name="cm">cm</string>
     <string name="kg">kg</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
     <plurals name="my_doctors_description">
         <item quantity="one">"%d doctor requested to help you. You may accept, revoke or decline each doctor\'s status at any point."</item>
         <item quantity="other">%d doctors requested to help you. You may accept, revoke or decline each doctor\'s status at any point.</item>
