* Added Bottom Sheets withAge

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,27 @@
     <string name="kg">kg</string>
     <string name="weight">Weight</string>
     <string name="height">Height</string>
+    <string name="average_cycle">Average Cycle</string>
+    <string name="gynosurgery_label">Gynecology description</string>
+    <string name="gynosurgery_placeholder">Give a brief description about your gynecology surgery…</string>
+    <string name="gynosurgery_title">Gynosurgery</string>
+    <string name="onboarding_title_gynosurgery">Have you ever performed gynecology surgery?</string>
+    <string name="medvits_placeholder">Tell us what you\'ve received in the past…</string>
+    <string name="medvits_label">MedVits description</string>
+    <string name="medVits">MedVits</string>
+    <string name="enable_manage_data_consent">You have to enable Manage Data Consent</string>
+    <string name="auto_mode">Auto Mode</string>
+    <string name="light_mode">Light Mode</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="tap_to_toggle">Tap to toggle</string>
+    <string name="enable_predictions">Enable Predictions</string>
+    <string name="enable_predictions_description">Enabling this option triggers machine learning for predicting your next cycle</string>
+    <string name="manage_data_consent">Manage Data Consent</string>
+    <string name="my_doctors">My Doctors</string>
+    <string name="age">Age</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="version_flora">Version: 2025.02.12 (5)</string>
     <plurals name="my_doctors_description">
         <item quantity="one">"%d doctor requested to help you. You may accept, revoke or decline each doctor\'s status at any point."</item>
         <item quantity="other">%d doctors requested to help you. You may accept, revoke or decline each doctor\'s status at any point.</item>
