--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="tap_to_toggle">Tap to toggle</string>
     <string name="enable_predictions">Enable Predictions</string>
     <string name="enable_predictions_description">Enabling this option triggers machine learning for predicting your next cycle</string>
+    <string name="metamask_description">Enable this option to connect to your personal Metamask wallet</string>
     <string name="manage_data_consent">Manage Data Consent</string>
     <string name="my_doctors">My Doctors</string>
     <string name="age">Age</string>
@@ -64,6 +65,11 @@
     <string name="logout_was_successful">Logout was successful</string>
     <string name="or">Or</string>
     <string name="continue_as_an_anonymous_user">Continue as an anonymous user</string>
+    <string name="connect_to_metamask">Enable Metamask</string>
+    <string name="disconnect_from_metamask">Disable Metamask</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="retry">Retry</string>
+    <string name="you_have_to_enable_metamask">You have to enable Metamask</string>
     <plurals name="my_doctors_description">
         <item quantity="one">"%d doctor requested to help you. You may accept, revoke or decline each doctor\'s status at any point."</item>
         <item quantity="other">%d doctors requested to help you. You may accept, revoke or decline each doctor\'s status at any point.</item>
