--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="dark_mode">Dark Mode</string>
     <string name="tap_to_toggle">Tap to toggle</string>
     <string name="enable_predictions">Enable Predictions</string>
+    <string name="disable_predictions">Disable Predictions</string>
     <string name="enable_predictions_description">Enabling this option triggers machine learning for predicting your next cycle</string>
     <string name="metamask_description">Enable this option to connect to your personal Metamask wallet</string>
     <string name="manage_data_consent">Manage Data Consent</string>
@@ -67,11 +68,18 @@
     <string name="continue_as_an_anonymous_user">Continue as an anonymous user</string>
     <string name="connect_to_metamask">Enable Metamask</string>
     <string name="disconnect_from_metamask">Disable Metamask</string>
-    <string name="something_went_wrong">Something went wrong</string>
+    <string name="something_went_wrong">Something went wrong. Internet maybe?</string>
     <string name="retry">Retry</string>
     <string name="you_have_to_enable_metamask">You have to enable Metamask</string>
+    <string name="requested">Requested</string>
+    <string name="doctor_item_name_text">Doctor Id: %s</string>
+    <string name="granted">Granted</string>
+    <string name="revoked">Revoked</string>
+    <string name="no_signature_connect_to_metamask_first">No signature. Connect to Metamask first</string>
+    <string name="doctor_was_rejected">Doctor was rejected</string>
+    <string name="wrong_account_yours_is">No authorization for account %1$s</string>
     <plurals name="my_doctors_description">
-        <item quantity="one">"%d doctor requested to help you. You may accept, revoke or decline each doctor\'s status at any point."</item>
-        <item quantity="other">%d doctors requested to help you. You may accept, revoke or decline each doctor\'s status at any point.</item>
+        <item quantity="one">"%d doctor requested to help you. You may grant or revoke access to your data."</item>
+        <item quantity="other">%d doctors requested to help you. You may grant or revoke access to your data.</item>
     </plurals>
 </resources>
